@@ -24,9 +24,8 @@ import javax.inject.Singleton;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.apache.maven.api.xml.XmlNode;
 import org.apache.maven.execution.MavenSession;
@@ -97,12 +96,10 @@ public class MojoDescriptorCreator {
                 .map(p -> XmlNode.newInstance(
                         p.getName(),
                         p.getExpression(),
-                        p.getDefaultValue() != null
-                                ? Collections.singletonMap("default-value", p.getDefaultValue())
-                                : null,
+                        p.getDefaultValue() != null ? Map.of("default-value", p.getDefaultValue()) : null,
                         null,
                         null))
-                .collect(Collectors.toList());
+                .toList();
         return XmlNode.newInstance("configuration", children);
     }
 
@@ -119,7 +116,7 @@ public class MojoDescriptorCreator {
                     XmlNode e = XmlNode.newInstance(
                             ce.getName(),
                             value,
-                            defaultValue != null ? Collections.singletonMap("default-value", defaultValue) : null,
+                            defaultValue != null ? Map.of("default-value", defaultValue) : null,
                             null,
                             null);
                     children.add(e);
