@@ -25,7 +25,6 @@ import javax.inject.Singleton;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.RepositoryUtils;
@@ -240,7 +239,7 @@ public class DefaultPluginDependenciesResolver implements PluginDependenciesReso
                             e.getResult().getArtifactResults().stream()
                                     .filter(r -> !r.isResolved())
                                     .flatMap(r -> r.getExceptions().stream()))
-                    .collect(Collectors.toList());
+                    .toList();
             throw new PluginResolutionException(plugin, exceptions, e);
         } finally {
             RequestTraceHelper.exit(trace);
