@@ -20,8 +20,8 @@ package org.apache.maven.impl.resolver;
 
 import java.time.Instant;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.apache.maven.api.Constants;
@@ -104,6 +104,6 @@ class RemoteSnapshotMetadataGenerator implements MetadataGenerator {
 
     @Override
     public Collection<? extends Metadata> finish(Collection<? extends Artifact> artifacts) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
