@@ -22,7 +22,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.Constants;
@@ -185,7 +184,7 @@ public final class UserPropertiesArtifactRelocationSource implements MavenArtifa
                         }
                         return new Relocation(global, s, t);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             LOGGER.info("Parsed {} user relocations", relocationList.size());
             return new Relocations(relocationList);
         }
